--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Computer and Mobile</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home Accessories</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Ladies</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Ladies & gentes</a></li>
             </ul>
           </div>
 
