--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="">Home</a></li>
-          <li><a class="nav-link scrollto" href="http://127.0.0.1:5500/Groovin/Post.html">Electronics</a></li>
+          <li><a class="nav-link scrollto" href="Post.html">Electronics</a></li>
           <li><a class="nav-link scrollto" href="#services">Home Accessories</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Clothes</a></li>
           <li><a class="nav-link scrollto" href="#team">Kitchen</a></li>
