--- a/Post.html
+++ b/Post.html
@@ -88,7 +88,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Shop Details</h2>
           <ol>
-            <li><a href="http://127.0.0.1:5500/Groovin/index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li>Shop Details</li>
           </ol>
         </div>
@@ -249,7 +249,7 @@
               </table>
               <hr style="background-color: tomato;" width="50%" height="450px">
       <h3>3.Noise</h3><h4>Noise ColorFit Pro 3 Assist Smart Watch with Alexa Built-in, 24*7 Spo2 Monitoring, 1.55" HD TruView Display, Stress, Sleep, Heart Rate Tracking (Rose Pink)</h4>
-      <img src="watch3.jpg" width="50px" height="450px"> 
+      <img src="watch3.jpg" style=width="50px" height="450px"> 
       <table>
         <tbody>
         <tr></tr>
