--- a/Post.html
+++ b/Post.html
@@ -126,7 +126,7 @@
         </center>
         <hr style="background-color: tomato;" width="100%" height="50px"><ol>
        <h3>1.Fire-Boltt </h3><h4>Ninja 2 SpO2 Full Touch Smartwatch with 30 Workout Modes, Heart Rate Tracking, and 100+ Cloud Watch Faces, 7 Days of extensive Battery, Deep Black, M</h4></ol>
-        <img src="610IRZvywtL._SX569_.jpg" width="50px" height="450px"> 
+        <img src="610IRZvywtL._SX569_.jpg"  style="width:350px; height:450px;"> 
         <!-- <div class="pros_cons_container">
             <div class="pros_container"><div class="Section-center">
                 <a href="https://amzn.to/3818ioo">Buy Now</a>
@@ -190,7 +190,7 @@
     </table>
       <hr style="background-color: tomato;" width="50%" height="450px">
       <h3>2.Noise</h3><h4>Noise ColorFit Pro 2 Full Touch Control Smart Watch with 35g Weight & Upgraded LCD Display,IP68 Waterproof,Heart Rate Monitor,Sleep & Step Tracker,Call & Message Alerts & Long Battery Life (Jet Black)</h4>
-      <img src="Smart Watch2.jpg" width="50px" height="450px"> 
+      <img src="Smart Watch2.jpg"  style="width:350px; height:450px;"> 
       <!-- <div class="pros_cons_container">
           <div class="pros_container"><div class="Section-center">
               <a href="https://amzn.to/3818ioo">Buy Now</a>
@@ -249,7 +249,7 @@
               </table>
               <hr style="background-color: tomato;" width="50%" height="450px">
       <h3>3.Noise</h3><h4>Noise ColorFit Pro 3 Assist Smart Watch with Alexa Built-in, 24*7 Spo2 Monitoring, 1.55" HD TruView Display, Stress, Sleep, Heart Rate Tracking (Rose Pink)</h4>
-      <img src="watch3.jpg" style=width="50px" height="450px"> 
+      <img src="watch3.jpg" style=width="350px" height="450px"> 
       <table>
         <tbody>
         <tr></tr>
@@ -283,7 +283,7 @@
           </thead>
       </table>
       <h3>4.GOQii</h3><h4>GOQii Smart Vital Fitness SpO2 1.3" HD Full Touch, Smart Notification Waterproof Smart Watch for Android Phones Blood Oxygen, Fitness, Sports & Sleep Tracking with 3 Months Personal Coaching (Black)</h4>
-      <img src="watch4.jpg" width="50px" height="450px"> 
+      <img src="watch4.jpg"  style="width:350px; height:450px;"> 
       <table>
         <tbody>
         <tr></tr>
@@ -321,7 +321,7 @@
   </th>
   </table>
   <h3>5.Yash</h3><h4>Yash Company Smart Watch Compatible with Smartphones Smart Watches All Features A8 Black for Boys & Girls</h4>
-      <img src="watch5.jpg" width="100px" height="600px"> 
+      <img src="watch5.jpg"  style="width:350px; height:450px;"> 
       <table>
         <tbody>
         <tr></tr>
