--- a/Post.html
+++ b/Post.html
@@ -47,13 +47,13 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="http://127.0.0.1:5500/Groovin/index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="http://127.0.0.1:5500/Groovin/Post.html">Electronics</a></li>
+          <li><a class="nav-link scrollto " href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="Post.html">Electronics</a></li>
           <li><a class="nav-link scrollto" href="#services">Home Accessories</a></li>
           <li><a class="nav-link scrollto active" href="#portfolio">Computer Mobiles watches</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>More Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
