--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <li class="dropdown"><a href="#"><span>More Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Wearing Accessories</a></li>
+              <li><a href="rings.html">Wearing Accessories</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
