--- a/rings.html
+++ b/rings.html
@@ -301,7 +301,7 @@
   <hr style="height:2.5px; width:100%; color:red;">
   <h3>5.YouBella</h3><h4>YouBella Jewellery Stylish Silver Plated Solitaire Crystal Ring for Women and Girls
   </h4>
-      <img src="ringA5.jpg"  style="width: 380px; height:400px; align-items: center;"> 
+      <img src="ring5.jpg"  style="width: 380px; height:400px; align-items: center;"> 
       <table>
         <tbody>
         <tr></tr>
