--- a/rings.html
+++ b/rings.html
@@ -47,8 +47,8 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="http://127.0.0.1:5500/Groovin/index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="http://127.0.0.1:5500/Groovin/Post.html">Electronics</a></li>
+          <li><a class="nav-link scrollto " href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="Post.html">Electronics</a></li>
           <li><a class="nav-link scrollto" href="#services">Home Accessories</a></li>
           <li><a class="nav-link scrollto active" href="#portfolio">Computer Mobiles watches</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
