--- a/rings.html
+++ b/rings.html
@@ -240,7 +240,7 @@
       <table>
         <tbody>
         <tr></tr>
-        
+          <a href="https://amzn.to/38A1BtC">Buy Now</a>
         <tr><th colspan="3">SPECIFICATION</th></tr>
         
         <tr> <td>Price</td> <td>:</td> <td>₹249.00 </td> </tr>
