--- a/rings.html
+++ b/rings.html
@@ -264,7 +264,7 @@
        <hr style="height:2.5px; width:100%; color:red;">
       <h3>4.Anarva</h3><h4>Amazon Brand - Anarva Women's Leaf Toe-Ring in Sterling Silver</h4>
      <center> <img src="ringN4.jpg" style="width: 400px; height:350px; align-items: center;"> </center>
-                <a href="https://amzn.to/3Mvei7I">Buy Now</a>
+                <a href="https://amzn.to/3Mvei7I">Buy Now</a><br>
 <!--       <table> -->
 <!--         <tbody>
         <tr></tr>
