--- a/rings.html
+++ b/rings.html
@@ -303,7 +303,8 @@
   <hr style="height:2.5px; width:100%; color:red;">
   <h3>5.YouBella</h3><h4>YouBella Jewellery Stylish Silver Plated Solitaire Crystal Ring for Women and Girls
   </h4>
-      <img src="ring5.jpg"  style="width: 380px; height:400px; align-items: center;"> 
+      <img src="ring5.1.jpg"  style="width: 380px; height:400px; align-items: center;"> 
+  <a href="https://amzn.to/3wud8Tm">Buy Now</a>
       <table>
         <tbody>
         <tr></tr>
