--- a/rings.html
+++ b/rings.html
@@ -50,7 +50,7 @@
           <li><a class="nav-link scrollto " href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="Post.html">Electronics</a></li>
           <li><a class="nav-link scrollto" href="#services">Home Accessories</a></li>
-          <li><a class="nav-link scrollto active" href="#portfolio">Computer Mobiles watches</a></li>
+          <li><a class="nav-link scrollto active" href="#portfolio">Ladies Accessories</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
