--- a/Post.html
+++ b/Post.html
@@ -207,7 +207,7 @@
           </div> -->
           <!-- <div class="pros_container cons">
               <strong><img class="lazyimage" src="190-1900221_red-thumbs-down-png-png-download-red-thumbs.jpg" data-src="https://www.digit.in/images/thumbs_down.svg" alt="cons" title="cons" width="35px"> Cons</strong><br>
-<a href="https://amzn.to/3LA7vbF"></a>
+<a href="https://amzn.to/3LA7vbF">Buy Now</a>
           <ul>
           <li><span>The charging cable is clunky</span></li>
           <li><span>The app can be overwhelming</span></li>
