--- a/Post.html
+++ b/Post.html
@@ -190,7 +190,8 @@
     </table>
       <hr style="background-color: tomato;" width="50%" height="450px">
       <h3>2.Noise</h3><h4>Noise ColorFit Pro 2 Full Touch Control Smart Watch with 35g Weight & Upgraded LCD Display,IP68 Waterproof,Heart Rate Monitor,Sleep & Step Tracker,Call & Message Alerts & Long Battery Life (Jet Black)</h4>
-      <img src="Smart Watch2.jpg"  style="width:350px; height:450px;"> 
+      <img src="Smart Watch2.jpg"  style="width:350px; height:450px;"> <br>
+      <a href="https://amzn.to/3LA7vbF">Buy Now</a>
       <!-- <div class="pros_cons_container">
           <div class="pros_container"><div class="Section-center">
               <a href="https://amzn.to/3818ioo">Buy Now</a>
