--- a/Post.html
+++ b/Post.html
@@ -251,7 +251,8 @@
               </table>
               <hr style="background-color: tomato;" width="50%" height="450px">
       <h3>3.Noise</h3><h4>Noise ColorFit Pro 3 Assist Smart Watch with Alexa Built-in, 24*7 Spo2 Monitoring, 1.55" HD TruView Display, Stress, Sleep, Heart Rate Tracking (Rose Pink)</h4>
-      <img src="watch3.jpg" style="width=350px; height:450px;"> 
+      <img src="watch3.jpg" style="width=350px; height:450px;">
+      <a href="https://amzn.to/3lwFtmN">Buy Now</a>
       <table>
         <tbody>
         <tr></tr>
