--- a/Post.html
+++ b/Post.html
@@ -191,7 +191,7 @@
       <hr style="background-color: tomato;" width="50%" height="450px">
       <h3>2.Noise</h3><h4>Noise ColorFit Pro 2 Full Touch Control Smart Watch with 35g Weight & Upgraded LCD Display,IP68 Waterproof,Heart Rate Monitor,Sleep & Step Tracker,Call & Message Alerts & Long Battery Life (Jet Black)</h4>
       <img src="Smart Watch2.jpg"  style="width:350px; height:450px;"> <br>
-      <a href="https://amzn.to/3LA7vbF">Buy Now</a>
+      <br><a href="https://amzn.to/3LA7vbF">Buy Now</a>
       <!-- <div class="pros_cons_container">
           <div class="pros_container"><div class="Section-center">
               <a href="https://amzn.to/3818ioo">Buy Now</a>
@@ -259,7 +259,7 @@
         
         <tr><th colspan="3">SPECIFICATION</th></tr>
         
-        <tr> <td>Price</td> <td>:</td> <td>₹3,499.00 </td> </tr>
+        <tr> <td>Price</td> <td>:</td> <td>₹3,299.00 </td> </tr>
         <!-- <tr> <td>Calorie Count</td> <td>:</td> <td>Yes</td> </tr> -->
                                                                             <tr><td>Brand</td> <td>:</td> <td>Noise</td> </tr>
                                                                 <tr><td>Power (Battery)</td> <td>:</td> <td>240 Hours<br /></td> </tr>
