--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav id="navbar" class="navbar">
+      <nav id="navbar" class="navbar" "navbar navbar-default navbar-static-top" role="navigation">
         <ul>
           <li><a class="nav-link scrollto active" href="">Home</a></li>
           <li><a class="nav-link scrollto" href="Post.html">Electronics</a></li>
