--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <h3 class="mb-0">Featured post</h3>
           <div class="mb-1 text-muted">Nov 12</div>
           <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="stretched-link">Continue reading</a>
+          <a href="2nd.html" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
           <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
@@ -109,7 +109,7 @@
           <h3 class="mb-0">Top 5 Rings For Girls</h3>
           <div class="mb-1 text-muted">Nov 11</div>
           <p class="mb-auto">In This post You Will see top 5 Rigns for girls which are in budget but amazing.</p>
-          <a href="#" class="stretched-link">Continue reading</a>
+          <a href="ring.html" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
           <img class="bd-placeholder-img" width="200" height="250" src="ring2.jpg" alt="ring imge">
