--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <h3 class="mb-0">Top 5 Rings For Girls</h3>
           <div class="mb-1 text-muted">Nov 11</div>
           <p class="mb-auto">In This post You Will see top 5 Rigns for girls which are in budget but amazing.</p>
-          <a href="rings.html" class="stretched-link">Continue reading</a>
+          <a href="2nd.html" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
           <img class="bd-placeholder-img" width="200" height="250" src="ring2.jpg" alt="ring imge">
