--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
           <strong class="d-inline-block mb-2 text-primary">World</strong>
-          <h3 class="mb-0">Featured post</h3>
+          <h3 class="mb-0">Top 5 Smart watches</h3>
           <div class="mb-1 text-muted">Nov 12</div>
-          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text mb-auto">In This Post You Will Know about Top 5 Smart watches Which maybe In your Budget.</p>
           <a href="newpost.html" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
