--- a/newpost.html
+++ b/newpost.html
@@ -94,6 +94,7 @@
             -->
    
             <body>
+                <INPUT TYPE="button" VALUE="Previous" onClick="history.go(-1);">
     <center>
         <h1>TOP 5 SMART WATCHES</h1>
         </center>
@@ -333,7 +334,8 @@
     </p>
     <input type="button" class="btn btn-lg btn-success" onclick="location.href='index.html';" value="Home" />
         </center>
-        <center></div>
+        </div>
+<center>
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
         <div class="btn-group me-2" role="group" aria-label="First group">
           <a href="2nd.html" button type="button" class="btn btn-primary">1 Top 5 Rings for Girls</a>
@@ -350,6 +352,7 @@
           <button type="button" class="btn btn-info">8</button>
         </div>
       </div>
+</center>
       <center style="color:red;"><div>
         <footer class="blog-footer">
             <p>All rights Reserved Bhise Industries.</p>
