--- a/2nd.html
+++ b/2nd.html
@@ -299,5 +299,32 @@
             </table>
             
         </p>
+<center>
+    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+        <div class="btn-group me-2" role="group" aria-label="First group">
+          <a href="2nd.html" button type="button" class="btn btn-primary">1 Top 5 Rings for Girls</a>
+          <button type="button" class="btn btn-primary">2</button>
+          <button type="button" class="btn btn-primary">3</button>
+          <button type="button" class="btn btn-primary">4</button>
+        </div>
+        <div class="btn-group me-2" role="group" aria-label="Second group">
+          <button type="button" class="btn btn-secondary">5</button>
+          <button type="button" class="btn btn-secondary">6</button>
+          <button type="button" class="btn btn-secondary">7</button>
+        </div>
+        <div class="btn-group" role="group" aria-label="Third group">
+          <button type="button" class="btn btn-info">8</button>
+        </div>
+      </div>
+</center>
+      <center style="color:red;"><div>
+        <footer class="blog-footer">
+            <p>All rights Reserved Bhise Industries.</p>
+            <p>
+              
+            </p>
+          </footer>
+      </div>
+      </center>
         </body>
     </html>
