--- a/2nd.html
+++ b/2nd.html
@@ -303,7 +303,7 @@
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
         <div class="btn-group me-2" role="group" aria-label="First group">
           <a href="2nd.html" button type="button" class="btn btn-primary">1 Top 5 Rings for Girls</a>
-            <a href="headphone.html" button type="button" class="btn btn-primary">2 Headphones </a>
+            <a href="Headphones.html" button type="button" class="btn btn-primary">2 Headphones </a>
           <button type="button" class="btn btn-primary">3</button>
           <button type="button" class="btn btn-primary">4</button>
         </div>
